# proj2md

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conignes du projet.md  main.py  pyproject.toml  requirements.txt  taskfile.yaml
.github /workflows/: ci.yml  release.yml
proj2md/: __init__.py  cli.py
tests/: test_proj2md.py
